--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -115,20 +115,25 @@
 
         <li class="post-1509 has-post-thumbnail">
 
-          <a href="tim/">
+          <a href="tim-and-craig/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" />
+              <div class="gutter-small">
+                <img alt="Last of the Big Tuskers (2018) &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
+              </div>
+              <div class="gutter-small">
+                <img alt="Last of the Big Tuskers (2018) &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" />
+              </div>
 
             </div>
           </a>
 
-          <a href="tim/"><h5 class="woo-title">Tim</h5></a>
+          <a href="tim-and-craig/"><h5 class="woo-title">Tim &amp; Craig</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
-        <li class="post-1497 has-post-thumbnail">
+        <!-- <li class="post-1497 has-post-thumbnail">
 
           <a href="craig/">
             <div class="clear">
@@ -141,7 +146,7 @@
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
-        </li>
+        </li> -->
 
         <br class="clear">
 
@@ -157,7 +162,7 @@
 
       <!-- If you are interested in a custom print, please contact account office at Animat Habitat, for a quote based on the specific requirements. -->
 
-      <p class="linebreak small">Copyright &copy; 2018-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat &frasl; Terms of Access">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'access.</font></p>
+      <p class="linebreak small">Copyright &copy; 2018-2024 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat &frasl; Terms of Access">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'access.</font></p>
 
     </div>
 
