--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" href="inc/ico/oafa.mark.1.1.72.light.png" />
 
   <style>
-    html { background-color:#333; }
+    html { background-color: #333; }
 
   </style>
 
@@ -76,7 +76,7 @@
 
         </div>
 
-        <div id="register-head">
+        <div>
           <a class="nav-block block-one" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;&nbsp;art de couverture." />
             <div>
@@ -85,34 +85,6 @@
             </div>
 
           </a>
-
-          <div id="register-toggle">
-            <h3><a onclick="toggle_register();">&plus;</a></h3>
-
-          </div>
-
-          <div class="clear toggle-off" id="register" spellcheck="false">
-
-            <div>
-              <h3><a onclick="toggle_register();">&minus;</a><br>Behind the scenes<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses&nbsp;:</font></h3>
-              <p>Register for membership behind the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la nature.</font></p>
-
-            </div>
-
-            <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
-              <div class="clear-top">
-                <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value=='Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
-              </div>
-
-              <div class="clear-top">
-                <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value=='E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" class="required email trim" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
-                <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
-
-              </div>
-
-            </form>
-
-          </div>
 
         </div>
       </div>
@@ -161,22 +133,38 @@
       </div>
 
       <div class="quote ptych-left">
-        <p class="lineend">Follow what's happening @<a href="url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p>
+        <!-- <p>Follow what's happening @<a href="url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p> -->
+
+        <h5>Behind-the-scenes at Animat Habitat&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses&hellip;</font></h5>
+        <p>Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses de la nature.</font></p>
+
+        <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
+
+          <div class="gutter-tobo">
+            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value=='Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+          </div>
+
+          <div class="gutter-tobo clear-top">
+            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value=='E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" class="required email trim" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
+            <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
+
+          </div>
+
+        </form>
 
         <pre class="thin"></pre>
 
         <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <em>Oswald</em> [Extra-Light, Medium], and then archived with GitHub pages.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub.</font></p>
 
-        <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy.
-        <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
+        <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy. <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
 
         <p class="linebreak small">Animat Habitat <a href="support/" title="Animat Habitat support.">Sitemap</a>.<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web.</font></p>
 
         <p class="linebreak small">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="societas/" title="Animat Habitat societ&#257;s.">Member Handbook</a>.<font class="fr">&nbsp;&#92;&nbsp;Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif &mdash; le nom de l'organisation est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le manuel des membres.</font></p>
 
-        <!-- <p class="linebreak small">Thank you for your time.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre temps.</font></p> -->
+        <!-- <p class="linebreak small">Thank you for visiting.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre visite.</font></p> -->
 
-        <p class="linebreak small">Copyright &copy; 2015-2023 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access.">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+        <p class="linebreak small">Copyright &copy; 2015-2024 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access.">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
 
       </div>
     </div>
@@ -188,29 +176,12 @@
 <script>
 
   var r = document.querySelector(':root'),
-      toggle_lang = 0,
-      register_form = document.getElementById( "register" ),
-      register_toggle = document.getElementById( "register-toggle" );
+      toggle_lang = 0;
 
-    r.style.setProperty('--fr', "none");
-    // r.style.setProperty('--fr-en', "display-inline");
-
-  register_form.style.display = "none";
-  register_toggle.style.display = "block";
+  r.style.setProperty('--fr', "none");
+  // r.style.setProperty('--fr-en', "display-inline");
 
   document.onload = load_createsend();
-
-  function toggle_register() {
-    if ( register_form.style.display == "none" ) {
-      register_form.style.display = "block";
-      register_toggle.style.display = "none";
-      document.querySelector( "#register-head" ).scrollIntoView({ behavior: 'smooth' });
-    }
-    else {
-      register_form.style.display = "none";
-      register_toggle.style.display = "block";
-    }
-  };
 
   function load_createsend() {
 
