--- a/princeps/index.html
+++ b/princeps/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat princeps.</title>
 
   <style>
-    html { background-color:#333; }
+    html { background-color: #333; }
 
   </style>
 
@@ -132,6 +132,7 @@
               <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
 
               <!-- <a href="../url/x/mumilaaqqaqqaq/" title="X / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
+              <!-- Mumilaaq is now focused on sewing, beading, painting and making her space hers. -->
 
             </div>
 
