--- a/scene/one/companion-app-augmented-reality/index.html
+++ b/scene/one/companion-app-augmented-reality/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat project broadcast.</title>
 
   <style>
-    html { background-color:#222; }
+    html { background-color: #222; }
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
@@ -112,8 +112,8 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
-            <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
+            <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
+            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
 
           </div>
 
