--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat project broadcast.</title>
 
   <style>
-    html { background-color:#222; }
+    html { background-color: #222; }
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
@@ -41,63 +41,58 @@
         <h2 class="scene-one">A History of Elephant Conservation</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <!-- <p class="linebreak"><em>
+        <p class="linebreak"><em>This article takes a look back at a human history of our natural world with elephants&hellip; When a worldwide ban on ivory sales in 1989 led to a rebound in the population, to about a million&hellip; Then in 1999 and 2008, due to pressure from countries in Asia and southern Africa, when the Convention on International Trade in Endangered Species allowed two sanctioned sales of ivory&hellip; Up until today, when the state of elephants in the world is not as it was decades ago and centuries ago and so on.</em></p>
 
-          Here, we look back at a natural history of our world with elephants.
+        <p class="linebreak"><em>As the world tries to look forward to a future with elephants in the wild in Africa, people must move past any one baseline in our history with elephants. Look at how the way our world is, today, is not the way our world once was, nor the way our world will forever be. And the way of our wild world is, today, up to us.</em></p>
 
-          A worldwide ban on ivory sales in 1989 led to a rebound in the population, to about a million. But in 1999 and 2008, due to pressure from countries in Asia and southern Africa, the Convention on International Trade in Endangered Species (CITES) allowed two sanctioned sales of ivory.
+      </div>
 
-          The state of elephants in the world today is not as it was decades ago and centuries ago and so on.
+      <pre class="thin"></pre>
 
-          As we look forward to a future with elephants, it is important to look past any one baseline&mdash;to remember that the way our world looks today, is not the way our world once was, nor the way our world will forever be.
+      <div id="request-toggle">
+        <h5>&plus; <a class="overscore" onclick="toggle_request();">Request PDF</a></h5>
+        <p>This article is available as a press release.</p>
 
-          The way of the world is now up to us.
+      </div>
 
-        </em></p> -->
+      <div class="toggle-off" id="request">
 
-      <!-- </div>
+        <h5>&minus; <a class="overscore" onclick="toggle_request();">Close request</a></h5>
+        <p>Request: A History of Elephant Conservation PDF (sRGB, &nbsp;KB)</p>
 
-      <div>
+        <div class="gutter-tobo">
 
-        <div class="clear" id="request-toggle">
-          <h5>&plus; <a class="overscore" onclick="toggle_request();">Request PDF</a></h5>
-          <p>This article is available as a press release.</p>
+          <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A0A6F439069801F09A0CBBA94313CBFA8A9CFD0F6155D001351425E67703E4EEF34D21D77DAA7B416D98109D811B72051">
 
-        </div>
+            <!-- <div class="clear">
+              <label class="" for="dliyu">Optional: Register for the project broadcast: Art and story&hellip; And elephants.</label>
+              <input id="dliyu" class="" name="cm-ol-dliyu" type="checkbox" value="dliyu">
+            </div> -->
 
-        <div class="clear diptych">
+            <!-- <div class="clear">
+              <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name" placeholder="Name" onfocus="if (this.value=='Name') this.value = ''">
+            </div> -->
 
-          <div class="clear toggle-off" id="request">
-
-            <h5>&minus; <a class="overscore" onclick="toggle_request();">Close request</a></h5>
-
-            <p class="linebreak">Request: A History of Elephant Conservation PDF (sRGB, &nbsp;KB)</p>
-
-            <div class="gutter-tobo">
-
-              <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A0A6F439069801F09A0CBBA94313CBFA8A9CFD0F6155D001351425E67703E4EEF34D21D77DAA7B416D98109D811B72051">
-
-                <div class="clear">
-                  <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-jktktkh-jktktkh" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required.">
-                  <button type="submit">Request PDF</button>
-
-                </div>
-
-              </form>
-
+            <div class="clear">
+              <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-jktktkh-jktktkh" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required.">
+              <button type="submit">Request PDF</button>
             </div>
 
-          </div>
+          </form>
 
         </div>
 
       </div>
 
-      <div class="clear-top clear-bottom"> -->
-        <p class="linebreak"><em>There are estimates of nearly thirty million African elephants in the wild in the 1500s, when Europeans started exploring Africa&hellip;</em></p>
+      <pre class="thin"></pre>
+
+      <div class="clear-top clear-bottom">
+
+        <h3 class="linebreak">&hellip;</h3>
+        <p><em>There are estimates of nearly thirty million African elephants in the wild in the 1500s, when Europeans started exploring Africa&hellip;</em></p>
 
         <h3 class="linebreak">Pre-1960s</h3>
-        <p>Between the mid-1800s and the early 1900s, the annexation, colonization and partition of most of Africa by seven Western European nation-states &ndash; the Belgian, the British, the French, the German, the Italian, the Portuguese and the Spanish colonies &ndash; charted an unprecedented &lsquo;scramble&rsquo; for land and natural resources. The ivory trade followed the slave trade routes out of Africa, with broken tusks carried on the shoulders of broken men, out of the forests and savannas <em>en route</em> to the seas. African forest and savanna elephants were razed to the ground. Elephant populations were felled to ten million by the early 1900s, as an &lsquo;ivory frenzy&rsquo; in Europe was fueled by the mass production of combs, brush handles, piano keys and billiard balls and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="Christy, 2012">1</a>,&nbsp;<a class="button" onclick="fn();" title="Hartley, 2013">2</a>]</sup></p>
+        <p>Between the mid-1800s and the early 1900s, the annexation, colonization and partition of most of Africa by seven Western European nation-states &ndash; the Belgian, the British, the French, the German, the Italian, the Portuguese and the Spanish colonies &ndash; charted an unprecedented &lsquo;scramble&rsquo; for land and natural resources. The ivory trade followed the slave trade routes out of Africa, with broken tusks carried on the shoulders of <em>broken</em> men, out of the forests and savannas <em>en route</em> to the seas. African forest and savanna elephants were razed to the ground. Elephant populations were felled to ten million by the early 1900s, as an &lsquo;ivory frenzy&rsquo; in Europe was fueled by the mass production of combs, brush handles, piano keys and billiard balls and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="Christy, 2012">1</a>,&nbsp;<a class="button" onclick="fn();" title="Hartley, 2013">2</a>]</sup></p>
 
         <!-- The most pristine and prodigious tusks were designated &lsquo;billiard ball&rsquo; ivory. -->
 
@@ -132,7 +127,7 @@
 
         <div class="quote" id="footnotes-1970">
           <p class="small"><sup>3</sup> Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES). <a href="../../../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
-          <p class="small"><sup>4</sup> United States Fish &amp; Wildlife Service (US FWS). <em>Endangered Species Act</em>, 1973. <a href="../../../url/-gov/fws-endangered-laws-policies/" title="US FWS / Endangered Species Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>4</sup> United States Fish &amp; Wildlife Service (US FWS). Endangered Species Act, 1973. <a href="../../../url/-gov/fws-endangered-laws-policies/" title="US FWS / Endangered Species Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
           <p class="small"><sup>5</sup> Save the Elephants (STE). &lsquo;Counting Elephants&rsquo;. <a href="../../../url/-org/savetheelephants-counting-elephants/" title="Save the Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
 
         </div>
@@ -153,7 +148,7 @@
 
         <div class="quote" id="footnotes-1980">
           <p class="small"><sup>6</sup> Environmental Investigation Agency (EIA). &lsquo;A System of Extinction&rsquo;, 1989. <a href="../../../url/-org/eia-international-a-system-of-extinction/" title="EIA / A System of Extinction" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>7</sup> United States Fish &amp; Wildlife Service (US FWS). <em>African Elephant Conservation Act</em>, 1988. <a href="../../../url/-gov/fws-african-elephant-conservation-act/" title="US FWS / African Elephant Conservation Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>7</sup> United States Fish &amp; Wildlife Service (US FWS). African Elephant Conservation Act, 1988. <a href="../../../url/-gov/fws-african-elephant-conservation-act/" title="US FWS / African Elephant Conservation Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
 
         </div>
       </div>
@@ -434,8 +429,8 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
-            <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
+            <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
+            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
 
           </div>
 
