--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -110,6 +110,12 @@
           <div class="clear small">
             <p class="lineend">All included formats:<font class="fr">&nbsp;&#92;&nbsp;Tous les formats inclus&nbsp;:</font> CBZ,&nbsp;EPUB,&nbsp;PDF</p>
 
+            <!-- Portable Document Format (.pdf) -->
+            <!-- Comic Book Archive (.cbz) -->
+            <!-- Electronic Publication (.epub) -->
+            <!-- Apple Book (.ibook) -->
+            <!-- Kindle Edition (.azw) -->
+
           </div>
 
           <p class="lineend">Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">15</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">12</font></font></p>
@@ -353,6 +359,9 @@
 
       <p class="linebreak small"><font class="title">Monsoon</font></p>
       <p class="small"><font class="small">Save the Elephants &ndash;&nbsp;Samburu (c.1960-2022)</font></p>
+
+      <p class="linebreak small"><font class="title">Theodora</font></p>
+      <p class="small"><font class="small">Big Life Foundation &ndash;&nbsp;Kimana (c.1966-2023)</font></p>
 
     </div>
 
