--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat project broadcast.</title>
 
   <style>
-    html { background-color:#222; }
+    html { background-color: #222; }
   </style>
 
   <link rel="preconnect" href="https://animathabitat.com" />
@@ -76,7 +76,7 @@
       </div>
 
       <div>
-        <p>Another example of cave paintings, Phillipp’s Cave in Namibia, includes a white elephant painted more than five thousand years ago. Namibia is home to the Erongo Mountains. The area has historically allowed for rich wildlife because, as explained at Info-Namibia, &ldquo;the Erongo Mountains offer a reliable water supply, thanks to impermeable granite pans, which are filled during the rainy season.&rdquo; A white elephant is pictured among numerous rock paintings in the Erongo Mountains that depict the importance of animals in the lives of ancestors of the indigenous people of Southern Africa.</p>
+        <p>Another example of cave paintings, Phillipp’s Cave in Namibia, includes a white elephant painted more than five thousand years ago. Namibia is home to the Erongo Mountains. The area has historically allowed for rich wildlife because, as explained at Info-Namibia, &ldquo;the Erongo Mountains offer a reliable water supply, thanks to impermeable granite pans, which are filled during the rainy season.&rdquo; A white elephant is pictured among numerous rock paintings in the Erongo Mountains that depict the importance of animals in the lives of ancestors of the Indigenous people of Southern Africa.</p>
 
       </div>
 
@@ -171,8 +171,8 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
-            <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
+            <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
+            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
 
           </div>
 
