--- a/scene/two/history-of-the-forest-and-the-trees/index.html
+++ b/scene/two/history-of-the-forest-and-the-trees/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat project broadcast.</title>
 
   <style>
-    html { background-color:#111; }
+    html { background-color: #111; }
   </style>
 
   <link rel="preconnect" href="https://animathabitat.com" />
@@ -317,8 +317,8 @@
 
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
-            <h3><a onclick="toggle_register();">&minus;</a><br>Behind the Scenes:</h3>
-            <p>Register for membership behind the scenes of <em>White Elephant</em>.</p>
+            <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
+            <p>Register your name and address to get behind-the-scenes of <em>White Tiger</em>.</p>
 
           </div>
 
