--- a/societas/r/confirmation/index.html
+++ b/societas/r/confirmation/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat societ&#257;s. Confirm. &ndash;&nbsp;Confirmer.</title>
 
   <style>
-    html { background-color:#333; }
+    html { background-color: #333; }
 
   </style>
 
@@ -40,7 +40,7 @@
     <article>
 
       <div>
-        <h3 class="letterhead">Thanks for getting behind wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Merci de soutenir l'art de la nature.</font></h3>
+        <h3 class="letterhead">Thanks for your interest in scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre int&eacute;r&ecirc;t pour les sc&egrave;nes chez Animat Habitat.</font></h3>
 
         <h5 class="linebreak">Please verify your address.<font class="fr">&nbsp;&#92;&nbsp;Veuillez v&eacute;rifier votre adresse.</font></h5>
         <p>Use the verification link sent to your e-mail to confirm your registration.<font class="fr">&nbsp;&#92;&nbsp;Utilisez le lien de v&eacute;rification envoy&eacute; &agrave; votre adresse e-mail pour confirmer votre inscription.</font></p>
@@ -54,7 +54,9 @@
     <div class="quote">
       <p class="small">This step is included to protect from spam and to respect your privacy.<font class="fr">&nbsp;&#92;&nbsp;Cette &eacute;tape est incluse pour prot&eacute;ger du spam et pour respecter la confidentialit&eacute;.</font></p>
 
-      <p class="small linebreak">You may close this page at any time, or exit through the <a href="../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Vous pouvez fermer cette page &agrave; tout moment, ou sortir par la boutique.</font></p>
+      <p class="small linebreak">You may close this page at any time.<font class="fr">&nbsp;&#92;&nbsp;Vous pouvez fermer cette page &agrave; tout moment.</font></p>
+
+      <p class="small linebreak">Exit through the <a href="../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
 
     </div>
 
