--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat c&#333;nservat&#363;m.</title>
 
   <style>
-    html { background-color:#333; }
+    html { background-color: #333; }
 
   </style>
 
@@ -33,7 +33,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="OAFA Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active dark"><a><em>C&#333;nservat&#363;m</em></a></li>
-      <li class="crumb btn dark"><a href="africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.">Africa</a></li>
+      <li class="crumb btn dark"><a href="africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.">AFR</a></li>
       <!-- <li class="crumb btn dark"><a href="america-amerique/" title="Animat Habitat c&#333;nservat&#363;m. North America. &ndash;&nbsp;Am&egrave;rique du Nord.">N&nbsp;A</a></li> -->
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
@@ -123,7 +123,6 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><font class="color text-quote">&ldquo;</font><font class="thin">The wild animals always have no comment.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Les animaux sauvages n’ont toujours pas de commentaire.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jon Mooallem (2014), <em>Wild Ones: A Sometimes Dismaying, Weirdly Reassuring Story About Looking at People Looking at Animals in America</em>, p&nbsp;8. Penguin Books</font></h4>
 
         <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">The good Earth&mdash;we could have saved it, but we were too damn cheap and lazy.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">La bonne Terre&mdash;nous aurions pu la sauver, mais nous &eacute;tions sacr&eacute;ment ignoble et fain&eacute;ant.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Kurt Vonnegut, <em>A Man Without a Country</em> (2005)</font><h4> -->
 
@@ -131,7 +130,7 @@
 
         <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">Conservation is a state of harmony with a friend. You cannot cherrish his right hand and chop off his left.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Aldo Leopold</font><h4> -->
 
-        <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">Hey, if you can't sleep, count sheep. Don't count endangered animals, you will run out!</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Mitch Hedberg</font><h4> -->
+        <h4><font class="text-quote">&ldquo;</font><font class="thin">If you cannot sleep, count sheep. Do not count endangered animals. You will run out.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Mitch Hedberg</font><h4>
 
       </div>
     </section>
