--- a/societas/r/index.html
+++ b/societas/r/index.html
@@ -14,7 +14,7 @@
   <title>Animat Habitat societ&#257;s. Registration. &ndash;&nbsp;Enregistrement.</title>
 
   <style>
-    html { background-color:#333; }
+    html { background-color: #333; }
 
   </style>
 
@@ -43,7 +43,7 @@
 
         <div>
           <h3 class="letterhead">Behind the Scenes<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses</font></h3>
-          <p>Register for membership behind the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la nature.</font></p>
+          <p>Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la nature.</font></p>
 
         </div>
 
