--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -33,7 +33,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="OAFA Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active dark"><a><em>C&#333;nservat&#363;m</em></a></li>
-      <li class="crumb btn dark"><a href="africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.">AFR</a></li>
+      <!-- <li class="crumb btn dark"><a href="africa-afrique/" title="Animat Habitat c&#333;nservat&#363;m. Africa. &ndash;&nbsp;Afrique.">Afr</a></li> -->
       <!-- <li class="crumb btn dark"><a href="america-amerique/" title="Animat Habitat c&#333;nservat&#363;m. North America. &ndash;&nbsp;Am&egrave;rique du Nord.">N&nbsp;A</a></li> -->
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
@@ -130,7 +130,7 @@
 
         <!-- <h4><font class="text-quote">&ldquo;</font><font class="thin">Conservation is a state of harmony with a friend. You cannot cherrish his right hand and chop off his left.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Aldo Leopold</font><h4> -->
 
-        <h4><font class="text-quote">&ldquo;</font><font class="thin">If you cannot sleep, count sheep. Do not count endangered animals. You will run out.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Mitch Hedberg</font><h4>
+        <h4><font class="text-quote">&ldquo;</font><font class="thin">If you cannot sleep, count sheep&hellip;<br> Do not count endangered animals. You will run out.</font><font class="text-quote">&rdquo;</font><font class="fr">&nbsp;&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Mitch Hedberg</font><h4>
 
       </div>
     </section>
