--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -88,7 +88,7 @@
 
       <div class="clear-top clear-bottom">
 
-        <h3 class="linebreak">&hellip;</h3>
+        <h3>&hellip;</h3>
         <p><em>There are estimates of nearly thirty million African elephants in the wild in the 1500s, when Europeans started exploring Africa&hellip;</em></p>
 
         <h3 class="linebreak">Pre-1960s</h3>
