--- a/societas/r/index.html
+++ b/societas/r/index.html
@@ -32,7 +32,7 @@
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="OAFA Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="crumb scene dark"><a><em>Registration<font class="desktop"> &ndash; Enregistrement</font></em></a></li>
+      <li class="crumb scene dark"><a><em>&hellip;</em></a></li>
     </ul>
   </nav>
 
@@ -42,8 +42,15 @@
       <div class="clear" id="register" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Behind the Scenes<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses</font></h3>
-          <p>Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Adh&eacute;sion aux mises &agrave; jour dans les coulisses de l'art de la nature.</font></p>
+          <h3 class="letterhead">Behind-the-scenes at Animat Habitat&hellip;<font class="fr"><br>Dans les coulisses chez Animat Habitat&hellip;</font></h3>
+          <ul class="square">
+            <li>Letters from the editor of project broadcasts.<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'&eacute;diteur des mises &agrave; jour du projet.</font></li>
+            <li>Previews of artworks and exhibitions of work.<font class="fr">&nbsp;&#92;&nbsp;Avant-premi&egrave;res d'&oelig;uvres d'art et d'expositions d'&oelig;uvres.</font></li>
+
+          </ul>
+
+          <!-- <h5 class="linebreak">Behind-the-scenes at Animat Habitat&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses&hellip;</font></h5> -->
+          <p class="linebreak">Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses de la nature.</font></p>
 
         </div>
 
@@ -62,13 +69,6 @@
 
         <div class="clear-top">
           <p class="small">A verification e-mail will be sent to the address provided.<font class="fr">&nbsp;&#92;&nbsp;Un e-mail de v&eacute;rification sera envoy&eacute; &agrave; l'adresse fournie.</font></p>
-          <!-- <p class="small">A verification step is included to respect your privacy.<font class="fr">&nbsp;&#92;&nbsp;Une &eacute;tape de v&eacute;rification est incluse pour respecter votre vie priv&eacute;e.</font></p> -->
-          <!-- <ul class="small square">
-            <li>Behind the scenes access at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Acc&eacute;s aux coulisses chez Animat Habitat.</font></li>
-            <li>Letters from the editor of project updates.<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'&eacute;diteur des mises &agrave; jour du projet.</font></li>
-            <li>Previews of artworks and exhibitions of work.<font class="fr">&nbsp;&#92;&nbsp;Avant-premi&egrave;res d'&oelig;uvres d'art et d'expositions d'&oelig;uvres.</font></li>
-
-          </ul> -->
 
         </div>
       </div>
