--- a/societas/r/confirmation/0/index.html
+++ b/societas/r/confirmation/0/index.html
@@ -37,7 +37,7 @@
       <div>
         <h3 class="letterhead">Thanks for journeying this far.<font class="fr">&nbsp;&#92;&nbsp;Merci d'avoir voyag&eacute; aussi loin.</font></h3>
 
-        <p class="linebreak"><a href="../" title="Animat Habitat societ&#257;s. Registration. &ndash;&nbsp;Enregistrement.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
+        <p class="linebreak"><a href="../../" title="Animat Habitat societ&#257;s. Registration. &ndash;&nbsp;Enregistrement.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
 
       </div>
 
