--- a/url/drive/mark-1/index.html
+++ b/url/drive/mark-1/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/11Qzoya2Re4W5zEqUMNWTdq0qQsXjeNKs/view?usp=sharing" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1F6WI47rZE9LqFlJqf_EHeOVhoP5N2zDj/view" /></head></html>
