--- a/canon/index.html
+++ b/canon/index.html
@@ -58,7 +58,6 @@
       <p class="text-right gutter-side">Animat Habitat <em>Canon</em> 1.0, p&nbsp;1-2</p>
 
       <div id="presskit">
-
         <h4 class="letterhead thin">September<font class="fr">&nbsp;&#92;&nbsp;Septembre</font> 2015</h4>
         <h2 class="scene-one">Canon</h2>
         <h5 class="author">Press secretary at<font class="fr">&nbsp;&#92;&nbsp;Secr&eacute;taire de presse chez</font> Animat Habitat</h5>
@@ -75,7 +74,12 @@
           <li>Animat Habitat press kit: <a href="../url/drive/mark-1/" title="Animat Mark 1.1">ZIP archive</a><font class="fr">&nbsp;&#92;&nbsp;dossier de presse prot&eacute;g&eacute;</font> (<font class="fr">&nbsp;</font>89&nbsp;KB<font class="fr">&nbsp;</font>)</li>
         </ul>
 
-        <h3 class="linebreak">Our Story<font class="fr">&nbsp;&#92;&nbsp;Notre histoire</font></h3>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear-top">
+        <h3>Our Story<font class="fr">&nbsp;&#92;&nbsp;Notre histoire</font></h3>
         <p><em>A story communicates an idea, relates another perspective and, in any case, exists within a medium that manifests a window back into our world.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Une histoire communique une id&eacute;e, raconte une autre perspective et, dans tous les cas, existe dans un m&eacute;dium qui manifeste une fen&ecirc;tre encadrant une vue de retour sur notre monde.</em></font></p>
 
         <p class="linebreak">Each scene in the story at Animat Habitat is likewise a reflection of the way our world once was and &ndash; in some small spaces &ndash; still is wild. Scenes at Animat Habitat explore the vestiges of wilderness, from a modern perspective, and within a moment in human history when we the people have clear causes and effects on the state of the natural world. The mission at Animat Habitat is to redirect a shifting baseline&mdash;to change the way we look at wildlife, starting with African savanna elephants of the Kalahari desert and Okavango delta.<font class="fr">&nbsp;&#92;&nbsp;Chaque sc&egrave;ne de l'histoire chez Animat Habitat est &eacute;galement le reflet de la fa&ccedil;on dont notre monde &eacute;tait autrefois et &ndash; dans certains petits espaces &ndash; est toujours sauvage. Les sc&egrave;nes chez Animat Habitat explorent les vestiges de la nature, d'un point de vue moderne, et &agrave; un moment de l'histoire humaine o&ugrave; nous avons des causes et des effets clairs sur l'&eacute;tat du monde naturel. La mission chez Animat Habitat est de rediriger une base de r&eacute;f&eacute;rence d&eacute;caleant&mdash;de changer la fa&ccedil;on dont nous regardons la nature, &agrave; commencer par les &eacute;l&eacute;phants de savanne africaine et le bassin versant de l'Okavango en Angola, au Botswana et en Namibie.</font></p>
