--- a/c/index.html
+++ b/c/index.html
@@ -89,7 +89,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><em>Updated: September 2018. View the <a href="2015-09/" title="Animat Habitat terms of access. 1.1">previous version</a>.</em></p>
+        <!-- <p class="linebreak"><em>Updated: September 2018. View the <a href="2015-09/" title="Animat Habitat terms of access. 1.1">previous version</a>.</em></p> -->
 
         <p class="linebreak"><em>Terms may be updated without notice at the discretion of Animat Habitat. Access to Animat Webitat is permitted on a temporary basis; access to part or all of Animat Webitat may for any reason at any time or for any period be protected, restricted or revoked.</em></p>
       </div>
